Corrected flex-wrap for header

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header {
     padding: 1em 1em;
     justify-content: space-between;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
 }
 
 .title {
